--- a/async-dog/index.html
+++ b/async-dog/index.html
@@ -20,6 +20,14 @@
     <script>
       const url = "https://dog.ceo/api/breeds/image/random";
       // TODO: url에서 강아지 사진 링크를 가져와 본문의 img 소스를 대체하기
+      let button = document.getElementById("fetch-button");
+      button.addEventListener('click', async function(event){
+        event.preventDefault();
+        let response = await fetch(url);
+        let imgSrc = await response.json();
+        console.log(imgSrc.message);
+        document.getElementById("dog-image").setAttribute("src", imgSrc.message);
+      });
     </script>
   </body>
 </html>
